--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,36 @@
-name: End-to-end test
-on: [push]
+name: Create Cypress report
+on:
+  push:
+    branches:
+      - 'master'
 jobs:
-  cypress-run:
-    runs-on: ubuntu-20.04
+ cypress-run:
+    name: e2e tests
+    runs-on: ubuntu-22.04
+    container: cypress/browsers:node12.16.2-chrome81-ff75
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v5
-
-      - name: Save build folder
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          if-no-files-found: error
-          path: dist
+        - uses: actions/checkout@v2
+        - name: Install a project with a clean slate
+          run: |
+              npm ci
+              $(npm bin)/cypress cache path
+              $(npm bin)/cypress cache list
+              $(npm bin)/cypress verify
+              name: Run Cypress tests
+              run: npm run test:chrome
+              continue-on-error: true
+        - name: Copy test execution videos
+          run: |
+              mkdir public
+              cp -r cypress/videos public/videos
+        - name: Merge test results into one
+          run: npm run report:merge
+        - name: Generate HTML report
+          run: npm run report:generate
+        - name: Deploy report page
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+                github_token: ${{ secrets.GITHUB_TOKEN }}
+                publish_dir: ./public
+                user_name: 'github-actions[bot]'
+                user_email: 'github-actions[bot]@users.noreply.github.com'
