--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: Create Cypress report
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
 jobs:
- cypress-run:
+ cypress-e2e-chrome81:
     name: e2e tests
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-18.04
     container: cypress/browsers:node12.16.2-chrome81-ff75
     steps:
         - uses: actions/checkout@v2
