--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,7 +8,7 @@ jobs:
   
   cypress-e2e-chrome:
     name: Run on Chrome
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     container: cypress/browsers:node18.6.0-chrome105-ff104
     steps:
       - uses: actions/checkout@v2
