--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ jobs:
   cypress-e2e-chrome:
     name: Run on Chrome
     runs-on: ubuntu-latest
-    container: cypress/browsers:node18.6.0-chrome105-ff104
+    container: cypress/browsers:latest
     steps:
       - uses: actions/checkout@v2
       
