--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ jobs:
   cypress-e2e-chrome:
     name: Run on Chrome
     runs-on: ubuntu-latest
-    container: cypress/browsers:latest
+    container: cypress/browsers:node-18.16.0-chrome-113.0.5672.92-1-ff-113.0-edge-113.0.1774.35-1
     steps:
       - uses: actions/checkout@v2
       
