--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,10 +18,7 @@ jobs:
       
       - name: Install a project with a clean slate
         run: |
-          npm install
-          $(npm bin)/cypress cache path
-          $(npm bin)/cypress cache list
-          $(npm bin)/cypress verify
+          npm ci
       
       - name: Run Cypress tests
         run: npm run test:chrome
