--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,5 +40,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
+          user_name: 'illia'
+          user_email: 'pavlenkoillai@gmail.com'
